[package]
name = "gst-mppdarkgst"
version = "0.1.0"
edition = "2021"
description = "Rockchip MPP H.265 encoder and multi-codec decoder for GStreamer"
license = "AGPL-3.0"

[lib]
name = "gstmppdarkgst"
crate-type = ["cdylib"]

[dependencies]
gstreamer = "0.23"
gstreamer-video = "0.23"
gstreamer-base = "0.23"
glib = "0.20"
once_cell = "1"
libc = "0.2"

[build-dependencies]
